# xfce_gala_settings

./: .build.yml  Cargo.toml  README.md  build.rs
src/: main.rs  settings.rs
