[package]
name = "xfce_gala_settings"
version = "0.1.0"
authors = ["Piotr <siuszko@zoho.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
gdk = "^0.13.0"
glib = "^0.10.0"
gtk = "^0.9.0"
gtk-test = "^0.6"
rand = "^0.5.1"
gio = "^0.9.0"
relm = "0.20.0"
relm-derive = "0.20.0"
