[package]
name = "xfce_gala_settings"
version = "0.1.0"
authors = ["Piotr <siuszko@zoho.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.deb]
maintainer = "Mev Lyshkin <rybopiotr@gmail.com>"
copyright = "2020, Mev Lyshkin <rybopiotr@gmail.com>"
license-file = ["LICENSE", "4"]
extended-description = """\
Simple program for change setting of Gala window manager from XFCE"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/xfce_gala_settings", "usr/bin/", "755"],
    ["target/xfce_gala_settings.desktop", "usr/share/applications/", "644"],
]

[dependencies]
chrono = "0.4"
gdk = "^0.13.0"
glib = "^0.10.0"
gtk = "^0.9.0"
gtk-test = "^0.6"
rand = "^0.5.1"
gio = "^0.9.0"
relm = "0.20.0"
relm-derive = "0.20.0"
dconf_rs = "0.3.0"

[build-dependencies]
freedesktop-desktop-entry = "0.1.1"

[profile.release]
opt-level = 'z'
panic = 'abort'
lto = true
